# ivatar

./: .coveragerc  .env  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  INSTALL.md  MANIFEST.in  README.md  config.py  gpg-pubkey  import_csv.py  import_libravatar.py  libravatarproxy.py  requirements.txt  setup.cfg  setup.py
.gitlab/issue_templates/: example-template.md
attic/: debug_toolbar_resources.txt  encryption_test.py  example_mysql_config
encrypted_proxy/: README.md  proxy.py
encrypted_proxy/lib/: MyCypher.php  MyCypher.py
encrypted_proxy/test_code/: decrypt.py  encrypt.php
ivatar/: __init__.py  context_processors.py  middleware.py  settings.py  test_auxiliary.py  test_static_pages.py  test_utils.py  test_views.py  test_wsgi.py  urls.py  utils.py  views.py
ivatar/ivataraccount/: __init__.py  admin.py  avatar_creator_views.py  forms.py  gravatar.py  models.py  read_libravatar_export.py  test_views.py  test_views_bluesky.py  urls.py  views.py
ivatar/ivataraccount/migrations/: 0014_auto_20190218_1602.py  0015_apikey.py  0015_auto_20200225_0934.py  0016_auto_20190311_1016.py  0016_auto_20210413_0904.py  0017_auto_20190311_1103.py  0017_auto_20210528_1314.py  0018_alter_photo_format.py  (+2 more)
ivatar/static/: humans.txt
ivatar/tools/: forms.py  test_views.py  urls.py  views.py
templates/: _account_bar.html  _account_logout.html  base.html  base_home.html  contact.html  footer.html  header.html  home.html  maintenance.html  navbar.html  privacy.html  security.html  surely-badge.html
templates/openid/: login.html
(+37 files in other folders)
